# Learning_OpenCV

./: CmakeLists.txt  README.md
Code_2/: CmakeLists.txt
Code_2/Display_A_Picture/: CmakeLists.txt  main.cpp
Code_2/Downsampling/: CMakeLists.txt  main.cpp
Code_2/Open_Camera/: CMakeLists.txt  main.cpp
Code_2/Operation_Series/: CMakeLists.txt  main.cpp
Code_2/Play_A_Video/: CmakeLists.txt  main.cpp
Code_2/Play_With_Jump/: CmakeLists.txt  main.cpp
Code_2/Simple_Transform/: CMakeLists.txt  main.cpp
Code_2/To_Gray/: CMakeLists.txt  main.cpp
Code_2/Using_NameSpace/: CmakeLists.txt  main.cpp
Code_2/Write_In_AVI/: CMakeLists.txt  main.cpp
Test_OpenCV/: CmakeLists.txt  main.cpp
doc/: First Principles of Computer Vision.md  OpenCV.ipynb  OpenCV.md
