CMAKE_MINIMUM_REQUIRED(VERSION 3.12.12)
SET(CMAKE_CXX_STANDARD 17)
PROJECT("Simple_Transform")

# 头文件
INCLUDE_DIRECTORIES(${PROJECT_NAME} "./include")


# 可执行文件
ADD_EXECUTABLE(${PROJECT_NAME} "./main.cpp")


LINK_DIRECTORIES(${OpenCV_LIBRARY_DIRS})

# 添加链接库
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})

# 复制资源目录
ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD
                   COMMAND ${CMAKE_COMMAND} -E copy_directory
                       ${CMAKE_CURRENT_SOURCE_DIR}/assets $<TARGET_FILE_DIR:${PROJECT_NAME}>/assets)

# Test
ENABLE_TESTING()
ADD_TEST(NAME test1 COMMAND ${PROJECT_NAME} "./assets/img/Learning OpenCV 3.jpg") 